fixed footer color contrast

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,9 +3,10 @@ header {
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
-    background: #000 url("/assets/images/hero-dynamic.jpg") no-repeat center center;
+    background: url("/assets/images/hero-dynamic.jpg") no-repeat center center;
     min-height: 30em;
     border-bottom: 8px solid #222;
+    background-color: black;
 }
 
 #logo {
@@ -25,4 +26,5 @@ header {
 #hero-text {
     margin-top: 30px;
     text-align: center;
+    padding:20px 25px;
 }
